--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2,9 +2,20 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 1.5;
+  background-color: ghostwhite;
+  color: black;
 }
 
 .container {
+  display: flex;
+  align-items: center;
+  gap: 15px;
   max-width: 960px;
   margin: 0 auto;
+}
+
+.container img {
+  border-radius: 50px;
+  width: 100px;
+  height: 90px;
 }
